# insightops-ai

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 362fd5e8421f_add_projects_table.py  3a0390564cb4_fix_dataset_validated_at_column_type.py  59d40ede1431_add_datasets_table.py  5fe672b92091_alter_dataset_validated_at_to_.py  6064080577d8_add_reports_table.py  63dc1b828807_fix_dataset_validated_at_type.py  67a2bc2b8272_add_dataset_validation_fields.py  7dff09a3a1cc_init_db.py  a8b231f20eeb_add_pipeline_runs_table.py  ea4e60e48a77_add_users_table.py
app/: main.py
app/agents/: analytics_graph.py  analytics_state.py  analytics_tools.py
app/api/: deps.py
app/api/routers/: analytics.py  auth.py  datasets.py  (+4 more)
app/core/: config.py  exceptions.py  security.py
app/db/: clickhouse.py  session.py
app/models/: __init__.py  dataset.py  enums.py  pipeline_run.py  project.py  report.py  user.py
app/prompts/: report_summary.py
app/repositories/: analytics_repository.py  dataset_repository.py  project_repository.py  report_repository.py  user_repository.py
app/schemas/: analytics.py  auth.py  dataset.py  project.py  report.py  user.py
app/services/: analytics_service.py  auth_service.py  dataset_service.py  dataset_validation_service.py  file_storage_service.py  llm_service.py  project_service.py  report_service.py
dags/: hello_insightops_dag.py  process_dataset_dag.py
docker/airflow/: Dockerfile
scripts/: create_clickhouse_tables.py  run_analytics_agent.py
