[project]
name = "insightops-ai"
version = "0.1.0"
description = "AI-powered backend platform for business data analytics."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "greenlet>=3.5.1",
    "passlib[argon2]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "isort>=8.0.1",
]
